# GoogleTakeoutPhotoFixer

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: cd.yml  release-plz.yml
src/: archive.rs  cli.rs  lib.rs  main.rs  metadata.rs  process.rs
test_data/: make_archives.sh
test_data/input_decompressed/takeout-20260102T143355Z-3-001/Takeout/Google Photos/Album 1/: PXL_20250415_160315147.MP.jpg.supplemental-met.json
test_data/input_decompressed/takeout-20260102T143355Z-3-002/Takeout/Google Photos/Album 2/: 2013-12-02 14.07.52.jpg.supplemental-metadata.json
tests/: integration.rs
