[package]
name = "takeout-fixer"
version = "0.1.0"
edition = "2024"
authors = ["Jeppe Klitgaard <hi@jeppe.science>"]
rust-version = "1.92"
description = "A tool to fix Google Takeout photo metadata issues"
license = "MIT"
readme = "README.md"
repository = "https://github.com/JeppeKlitgaard/GoogleTakeoutPhotoFixer"
keywords = ["google", "takeout", "photos", "metadata", "exif"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"
glob = "0.3"
indicatif = "0.18"
little_exif = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4"
zip = "7"
